fix(search): prevent input text from overlapping search icon

--- a/assets/scss/docsy/_search.scss
+++ b/assets/scss/docsy/_search.scss
@@ -30,7 +30,7 @@
   // Search input element
   &__input {
     width: 100%;
-    text-indent: 1.5em;
+    padding-left: 2.5rem;
   }
   &__input:disabled {
     cursor: wait;
